# mion_engine

./: .cursorignore  .gitignore  ARCHITECTURE_GUIDE.md  CLAUDE.md  CMakeLists.txt  Makefile  PLAYER_DOCUMENTATION.md  README.md  README_ASSET_SCRIPTS.md  ROADMAP.md  asset_pipeline_plan.md  bug_fix_refactor.md  config.ini  end_bug_fix_refactor.md  map_controllers_revisar.md  plan_open_world.md  refactor_guidelines.md  world_bugs.md
.cursor/legacy/: refactor_first_gameplay_d495414f.plan.md  três_prioridades_roadmap_244041f5.plan.md
.cursor/plans/: roadmap_distribution.md  roadmap_enemy_variety.md  roadmap_run_loop.md  roadmap_ui_system.md
.github/workflows/: cmake.yml
build_verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
data/: attributes.ini  enemies.ini  items.ini  locale_en.ini  locale_ptbr.ini  player.ini  progression.ini  rooms.ini  spells.ini  talents.ini  town_dialogues.ini
legacy/: PLAYER_DOCUMENTATION.md  README_audio.md  ROADMAP_FALHAS.md  mana_magia_skill_tree_74f60565_revisar.plan.md  map_controllers_revisar.md  plan_open_world_revisar.md  plan_story_implementation.md  plan_ui_inventory.md  plano_atualizado_passo_0_+_5_passos_(mana_magia_skill_tree)_389d94ea_revisar.plan.md  refatorar-dungeon-e-town-scenes_dcb0481f_revisar.plan.md  roadmap_audio_polish_revisar.md  roadmap_cidade_npcs_quest_revisar.md  roadmap_conteudo_gameplay_revisar.md  roadmap_game_feel_revisar.md  roadmap_placeholder_textures_revisar.md  scene_registry_e_transições_151060bd_revisar.plan.md  três_prioridades_roadmap_244041f5_revisar.plan.md
legacy/archive/: roadmap_audio_polish_revisar.md  roadmap_cidade_npcs_quest_revisar.md  roadmap_distribution_revisar.md  roadmap_enemy_variety_revisar.md  roadmap_game_feel_revisar.md  roadmap_run_loop_revisar.md  roadmap_ui_system_revisar.md
src/: main.cpp
src/components/: attributes.hpp  collision.hpp  combat.hpp  equipment.hpp  health.hpp  item_bag.hpp  mana.hpp  player_config.hpp  potion_quickslot.hpp  progression.hpp  spell_book.hpp  spell_defs.hpp  stamina.hpp  status_effect.hpp  talent_data.hpp  talent_loader.hpp  talent_state.hpp  talent_tree.hpp  transform.hpp
src/core/: animation.hpp  asset_manifest.hpp  audio.cpp  audio.hpp  audio_asset_paths.hpp  bitmap_font.hpp  camera.hpp  config_loader.hpp  data_file_names.hpp  data_ini_loader.hpp  data_section_names.hpp  debug_log.hpp  dialogue.hpp  dialogue_loader.hpp  dungeon_dialogue.hpp  dungeon_dialogue_id.hpp  engine_config.hpp  engine_paths.hpp  ini_loader.hpp  input.cpp  input.hpp  keybind_config.hpp  locale.hpp  pause_menu.hpp  player_actor_id.hpp  quest_state.hpp  register_scenes.cpp  register_scenes.hpp  run_stats.hpp  save_data.hpp  save_migration.hpp  save_system.hpp  scene.hpp  scene_context.hpp  scene_fader.hpp  scene_ids.hpp  scene_registry.hpp  scripted_input.hpp  sprite.hpp  sprite_layout.hpp  (+4 more)
src/entities/: actor.hpp  enemy_ai_data.hpp  enemy_type.hpp  ground_item.hpp  nav_path.hpp  npc.hpp  player_data.hpp  projectile.hpp  shop.hpp
src/scenes/: credits_scene.hpp  dungeon_scene.hpp  game_over_scene.hpp  title_scene.hpp  town_scene.hpp  victory_scene.hpp  world_scene.hpp
src/systems/: ai_boss.hpp  ai_combat.hpp  ai_patrol.hpp  animation_driver.hpp  area_entry_system.hpp  attribute_levelup_controller.hpp  attribute_screen_ui.hpp  boss_state_controller.hpp  combat_fx_controller.hpp  common_player_progression_loader.hpp  dash_system.hpp  dialogue_render.hpp  dialogue_system.hpp  drop_system.hpp  dungeon_audio_system.hpp  dungeon_config_loader.hpp  dungeon_hud.hpp  dungeon_world_renderer.hpp  enemy_ai.hpp  enemy_death_controller.hpp  enemy_spawner.hpp  equipment_screen_controller.hpp  equipment_screen_ui.hpp  floating_text.hpp  footstep_audio_system.hpp  lighting.hpp  melee_combat.hpp  movement_system.hpp  npc_actor_factory.hpp  overlay_input.hpp  pathfinder.hpp  pause_menu_controller.hpp  player_action.hpp  player_configurator.hpp  projectile_system.hpp  resource_system.hpp  room_collision.hpp  room_flow_system.hpp  room_manager.hpp  run_stats_tracker.hpp  (+19 more)
src/world/: dungeon_rules.hpp  room.hpp  room_loader.hpp  tilemap.hpp  world_area.hpp  world_context.hpp  world_map.hpp  world_map_builder.hpp  zone_manager.hpp
tests/: test_common.hpp  test_credits_scene.cpp  test_dungeon_controllers.cpp  test_gamepad_input.cpp  test_gaps_v2.cpp  test_keybind_config.cpp  test_legacy.cpp  test_locale.cpp  test_main.cpp  test_plan.cpp  test_player_action_v2.cpp  test_scenes_v2.cpp  test_v2_core_main.cpp  test_v2_input_main.cpp  test_v2_main.cpp  test_v2_scenes_main.cpp
tests/components/: test_collision.cpp  test_combat_state.cpp  test_health.cpp  test_mana.cpp  test_player_config.cpp  test_progression.cpp  test_spell_book.cpp  test_spell_defs.cpp  test_stamina.cpp  test_status_effect.cpp  test_talent_tree.cpp  test_transform.cpp
tests/core/: test_config.cpp  test_difficulty.cpp  test_dungeon_config_loader.cpp  test_dungeon_dialogue_registry.cpp  test_dungeon_rules.cpp  test_engine_paths.cpp  test_gaps_v2.cpp  test_ini.cpp  test_quests.cpp  test_run_stats.cpp  test_save_data.cpp  test_save_v6.cpp  test_scene_manager.cpp  test_scripted_input.cpp  test_town_config_loader.cpp  test_ui.cpp
tests/entities/: test_actor.cpp  test_enemy_type.cpp
tests/input/: test_input_state.cpp  test_locale.cpp
tests/legacy/: test_legacy.cpp
tests/scenes/: test_credits_scene.cpp  test_scenes_v2.cpp  test_title_scene.cpp  test_world_scene_lifecycle.cpp
tests/systems/: test_animation.cpp  test_audio_fx.cpp  test_camera.cpp  test_core_systems.cpp  test_dialogue.cpp  (+12 more)
tests_legacy/: test_common.hpp  test_legacy.cpp  test_main.cpp
tests_v2/: test_gaps_v2.cpp  test_scenes_v2.cpp  test_v2_core_main.cpp  test_v2_input_main.cpp  test_v2_main.cpp
tools/: audit_texture_contract.py  debug_replay.py  gen_animated_sprites.py  gen_environment_sprites.py  gen_placeholder_textures.py  gen_prototype_8bit_sfx.py  preview_placeholders.py  render_stress_main.cpp  sprite_bench_main.cpp  stress_main.cpp  task.md  texture_backlog_contract.json  texture_contract_inventory.md  texture_manifest.json
(+35 files in other folders)
